# ChangeLog for dev-perl/Convert-ASN1
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-ASN1/ChangeLog,v 1.71 2014/08/22 14:42:42 axs Exp $

*Convert-ASN1-0.260.0-r1 (22 Aug 2014)

  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Convert-ASN1-0.260.0-r1.ebuild, -Convert-ASN1-0.260.0.ebuild:
  bumped current stable ebuild(s) EAPI to 5; committed directly to stable as no
  other changes present and revbump helps stable systems to keep from dieing on
  perl-5.18 upgrade

  08 Jan 2013; Torsten Veller <tove@gentoo.org> -Convert-ASN1-0.220.0.ebuild:
  Cleanup

  02 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  Convert-ASN1-0.260.0.ebuild:
  stable ppc ppc64, bug #428980

  29 Sep 2012; Raúl Porcel <armin76@gentoo.org> Convert-ASN1-0.260.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #428980

  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> Convert-ASN1-0.260.0.ebuild:
  Stable for HPPA (bug #428980).

  14 Sep 2012; Markus Meier <maekke@gentoo.org> Convert-ASN1-0.260.0.ebuild:
  arm stable, bug #428980

  12 Sep 2012; Johannes Huber <johu@gentoo.org> Convert-ASN1-0.260.0.ebuild:
  Stable for x86, wrt bug #428980

  12 Sep 2012; Agostino Sarubbo <ago@gentoo.org> Convert-ASN1-0.260.0.ebuild:
  Stable for amd64, wrt bug #428980

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -Convert-ASN1-0.230.0.ebuild,
  -Convert-ASN1-0.250.0.ebuild:
  Cleanup

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Convert-ASN1-0.260.0 (10 Jun 2012)

  10 Jun 2012; Torsten Veller <tove@gentoo.org> +Convert-ASN1-0.260.0.ebuild:
  Version bump

*Convert-ASN1-0.250.0 (09 Jun 2012)

  09 Jun 2012; Torsten Veller <tove@gentoo.org> +Convert-ASN1-0.250.0.ebuild:
  Version bump

*Convert-ASN1-0.230.0 (04 May 2012)

  04 May 2012; Torsten Veller <tove@gentoo.org> +Convert-ASN1-0.230.0.ebuild:
  Version bump
