@@ -1,0 +1,26 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-ASN1/Convert-ASN1-0.270.0.ebuild,v 1.1 2015/05/01 21:04:11 dilfridge Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=GBARR
+MODULE_VERSION=0.27
+inherit perl-module
+
+DESCRIPTION="Standard en/decode of ASN.1 structures"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	>=virtual/perl-ExtUtils-MakeMaker-6.300.0
+	test? (
+		>=virtual/perl-Math-BigInt-1.997.0
+		>=virtual/perl-Test-Simple-0.900.0
+	)
+"
+
+SRC_TEST=do
