@@ -2,13 +2,25 @@
 Hash: SHA256
 
 DIST Convert-ASN1-0.26.tar.gz 72623 SHA256 5db8b62fa0d036bd0cabc869ffe17941ad587d9a2af1ff030d554872adbc1ca1 SHA512 60bd40dd32c0aba54fd095f7d1c5022e41c434b9537f56ce1048d64738f1c4f0d93c5cf6f66e1fd7a01ed67be0cc88917e8ffb596d3014409fe99a320690095f WHIRLPOOL ffb7e9e06682472465416a70cdbb6f5fd18be413db8f568aaa68a6d273e269b354bc78067799630f31d5cfa33304afc1e8beeac4ddc7e332df274f3f3ff816e8
+DIST Convert-ASN1-0.27.tar.gz 74081 SHA256 74a4a78ae0c5e973100ac0a8f203a110f76fb047b79dae4fc1fd7d6814d3d58a SHA512 253bc0c1b2919841497a95bcbd05825217a3013c7f789fd9f3d389808fb015daca91f5c149797574bf32d38e94efb7f1d8df62e9e4c13928ec3b978cc9fd6fe8 WHIRLPOOL d42cd1f78e30118d975e0a6c73dee6f8e52de41d0d9b4431974680bffd5033dcdc6001227d340ba578ecce19f4df98ca3835f49b0b33d192ccb667af91972209
 EBUILD Convert-ASN1-0.260.0-r1.ebuild 560 SHA256 147509d0d39b732450465c14d60f55053ced0ba385fd13397841553e59ec516d SHA512 6f7fee4ab5b49f427ceb6cc92e38726f57a4c0c5d3181e29494e95efc4d6237201b416df9c90d3bc40f0cbfe862b8b00242ea7ab6b6c4cd9c25861bf5df1dae4 WHIRLPOOL dbee28e7578194278db645275558dcedeb7b662ec485d6f606f6354e412dee72a0f9a371334c4edb61c01ac2729bffc46b46194531d893d670c8375f0ed2cd03
-MISC ChangeLog 8253 SHA256 023054a87d50d471d7ffdb2fd507b874666cdd824fad8ce17a7454fe9774af27 SHA512 0f22db3e24f7fd347b71365c88ff3d165327986896ea7f00de81f0a35e24e1b9b43b061ba0e7668d5feb5b077a20ae38daab58636bd14459731f9feb269eca99 WHIRLPOOL 8b8e5610cd7176bfbfd1e9167880de882a098b5a4af821d78ac5912c62accfa733a96b9884f28bef19eeef2182476081e64f6cb39454f580a9adf70f57dfd9ce
+EBUILD Convert-ASN1-0.270.0.ebuild 739 SHA256 7d08331e3c7f45ed7edbcdf48d7975a00c1314d591a7c32a667d30418f8b7194 SHA512 328d2dd8019c6ec8a49af48aa1d88ab31ad7801b4795ba95d754813157e53a56202760fa1f4f055c217f3c17b64f198c8e9b2671b0d7114613dfaca0e3706221 WHIRLPOOL 474ce23934701970cc6c3d46505c7896da06b99108450c14d9d560b0b0f100973ab53d8fe001db5be7ce74ce2c4902d4619ef08a97985ce4f2bffb31c1b9f388
+MISC ChangeLog 8401 SHA256 98419f9a2df31776c863dae6f6cb1dbcb8224e58899b73f9ccdbb310d12f4d51 SHA512 8e97ac8386ce5b9c14589d72a6f1fc567da9b59af458223bad07a658911518c28f93b57d89871f4eaba36f9f1c73c6f534679facd8286b91c84eeb2f1a3c4ff0 WHIRLPOOL 86d50eff9e172c619ec231a384f19c28142a47aa7a8e10acc6c392900845bb09f35c1a2143f22dbcab16909a2c1a5349d86d83ac8e7a571a078b318787848761
 MISC metadata.xml 298 SHA256 f1deb1bec1d5d00ca4f1c0c47a3837fc46c054dd96119342e4bae1352104c463 SHA512 a7e5a232e6fb931662bda4359fa63bd47b775f27d68751bc9d7567e0d30ceb66794c11f7887c0f54960f133d363baff73bf3149918ac12859ad7ad66c02f20dc WHIRLPOOL de30ef5cd4e323d4871fbaa36091f500581fbcf019afc7fb06d4a6ec7dc6e696ecba9cf41bf5aa640dc691618da81d50291391f68d866212f14b71e864a19847
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlP3VucACgkQ2ugaI38ACPDumgD/fB1e69x1BCzPLIAArJ6H16BN
-AKrUNgMocWSME0I7f6IA/3HXTltVCPawltxdip7GK09k/YKEjC6qWZOK6e2jo3qw
-=A902
+iQIcBAEBCAAGBQJVQ+seAAoJEB9VdM6hupKVBhoQAK2fNX6FIiy+ErDbkjFy4xC3
+ZL9oYSUW08wlHY5DKaqcGltcZLsW1kEuzYA3LXJmtokqnrbENabhjvmzF2iXwGO4
+oJqZc3DGEaxU0MUwBPY5FC5MxEcWoiaPfWGHjrd9M8KO7Ye5Tr8L0E4CDxrkr1dk
+zDWiwJPe6tDxWfn1FX48+wwXwrtaO7nZZNHX8JA06+dX/4qYrIXBUIRnovZ05JQ2
+uONcTdD+K2RqRmi0P8obvNpEbBG5BL0zqMFtikVIAV8PBEduDrdKZNsGzYEwYpD8
+dorITcza1GSWBZM8mlBqgr1IkvsvzsyjlK9Lv3ttSlYWlzMmk9ndbzoIva9SbprV
+p94dBSxg6PTlWQygMNF9xKdgewx7uHndGg17X78NHcXCDGA7ONf1i+sipzO803ws
+GFc3DbRL6c9orjHzlIep11tS9Rt4OrfQrRmnhjFVQypRWcHvg2r/xENL2hJTPUm6
+Co68zBkY8lQvhZBfYWy+GP4dhSoWZDB2NVJPqBqwOxXzXvW5TAt/Qv/ZfBpqlRb8
+u3coXWWVEtNlKJszs8XSGxfkghBgGwLOc2Gj2s/KPjYNvGDMTc5uu5ykNWwkCPWc
+mU+e+H1lOV+wNbdiYK8S9ALllWDUwdMrjOkn/sZZtgevkOyc7fJsnYRNT/Y3ZhN1
+gIIM3m8N8ncc1XQ5qWF2
+=XTL+
 -----END PGP SIGNATURE-----
