@@ -1,0 +1,28 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Coro/Coro-6.420.0.ebuild,v 1.1 2015/05/01 21:11:36 dilfridge Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=MLEHMANN
+MODULE_VERSION=6.42
+inherit perl-module
+
+DESCRIPTION="The only real threads in perl"
+
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="
+	>=dev-perl/AnyEvent-5
+	>=dev-perl/Guard-0.500.0
+	virtual/perl-Scalar-List-Utils
+	>=virtual/perl-Storable-2.150.0
+	dev-perl/common-sense
+"
+DEPEND="${RDEPEND}
+	virtual/perl-ExtUtils-MakeMaker
+"
+
+SRC_TEST="do"
