@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST Coro-6.41.tar.gz 189177 SHA256 aaffe8d389c11f36c2bb14fb3c1a5525873d86dc6b66a41e42dc50ef49552fe4 SHA512 0f628854506080681a42d455c9e5a279e6129a590345f3d70e9051c281d7457dfe711466ff2716740b319d3b925a6b55a02b24cd765292ca4f53a07cf61aace7 WHIRLPOOL 3663f189b4d162a8b1d29845111f6d420ab92f52aa028ca737d7cb718a01bd278cf3421d1d725a61a9a7cf447728cf26c6bc65698e4f30989aa3a5bc63648fd7
+DIST Coro-6.42.tar.gz 189506 SHA256 5a803c6d8a2585c96a15438c53ae3d66b078cb966c20b7db12b4278b0fd06298 SHA512 a3ca165166320bddb6d66f4dd6015a6161b830aded9bb63c8ee989fe1129601cbd9d0b94fcecc6dd0402f3609b38ed62ed7f6267e8864148e4979028f7efc9d4 WHIRLPOOL c12b18c5e42b1b123eb9d010fd80327e7534312c60adb1fd61d212ddab881fb4f5dc09b7f140c4429ccf25ff3e9c0c026d29e655d5f11236c58979b16d59d329
 EBUILD Coro-6.410.0.ebuild 595 SHA256 3f2764796c96e3d4ad1e9be3ba082370d7617f7f9bfe4e14d58154385a63adc9 SHA512 b238b93fef0536679c167bf6a27903860dc274481b684dc64cdca423891c6e86b74b17ff08170245f041721dbc56ebf77784e4730d4e983118a35b662a6ff27b WHIRLPOOL 9597ec403077c1efeb65187c699853977457cd0de73aacdb805df10390e393a0e4472d5966dbf84f11efbd37690ecdf6da8b15783e941f94f7e028ec600c1e74
-MISC ChangeLog 2468 SHA256 21c8750ddf700c18d469e3ec0ab2c58b519404e1f4fa0783745a7131e8a654a3 SHA512 f5c14ab3c272920385c9f566eed8627353eafa1f8120b2fada4ca9c7a4832eaa55611c17b1438bab0fa9cef330e992e26ba487a02f02a0049ea38e0867d8ea00 WHIRLPOOL 803e444c474efbd0e81f451d3543f05974e280280e115b8a074c692321f21293b520ff7eabf3170d725b3e928d8819ab00cd8b982c5f84eb1bed61e7007bccd4
+EBUILD Coro-6.420.0.ebuild 595 SHA256 c3d0e1f542d61be825d78855a37faca5143d75cc956b9c0be21fb10e68b29ac1 SHA512 dda75d69cdc930446f74e972d19b2010da56c764fb6fb9c2fc9c7a3665a913bfca569aacc2c595b0dc6184d58ad4c9f3b9ca5ff4f845fa458559f10a8b10ddfa WHIRLPOOL 7989c90b1f99e202f04e9fa5e74706a7b488beb99dd7dc493925d927d7e3057aa6bba33014b15639d586bc17929d2fc581df569800c9acc631d05a9699a759dd
+MISC ChangeLog 2592 SHA256 e3575fe753acc4956e21d2e18a1987326d74c9f03c4cc7b2e31f9dcadb383ffa SHA512 cd8c11240b12c214be96f204030f96993363c7bd2e1841d817a295cd60e1d2739e4e2e9b90c64df56794d23f49e8198803ba6184b1f2cb7b38961a4276470cbd WHIRLPOOL 1fc00786dc7c279469c6a8b2a8ffd75fa49f351ac2daf1b2920e419d3cac09bf08a099e7e7aeb7752b4e7e1d7bdb918e3d0eb3e280ac100f4e1714b4b8d72798
 MISC metadata.xml 1714 SHA256 84294a71522ddff61905b633c4001e98c859a7655b956b7ea59aa176f4b42cc9 SHA512 54180b5601b33f864d1d58988a01cbc569e370f74f3a9f39877d5ec755155380588f8cdadf7e097ae85d1520f8fc47b8122f414f629c6fe3048689be5e8a2012 WHIRLPOOL 3a2b16048c438de929cd19cef6906a3c16c58d70af1b0312f040d5d896df3e782a046b13acf2cb55575e31b2a0a740c88f297a0923e15dcec15118c3a631d67b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUkz3QXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOczsEP/0p9PUJ76l+nUu0MiDgLqlaX
-mP9YFLhyqgMVEmtqYzAl8r169WC6r+tW5ggMj0GjoXHBKkk0Z/DooE7Ow6R6qqJr
-FCrJRROfJf+ez/Ddm9Y+CZqZ8PMILcSS9q9L25gBhv7g/XzbjLftKWIys0ujs5g4
-rpxisCzbhVJKdkeN30VhXNJZl6HIPubMkmtW+1tjdghbydCPa/YS+iep5H4RD5fJ
-6QmukjLis6/Txa17Jljpq2FJG1oKVD7oPH0tO4BYVe6/uhqbJxljt2xDuXh1EsIq
-4KD9HqfbfqC0Wo585gmfosPKYhZmCI+K+VwLKqdmnQ2it5zpvndTGoY4zKoqYEil
-p16X4F75ZzOMS8inuBhkZqOqxX4w1CfetWmEwewL/ajdB1XpkZkKD6mibjNQiVKF
-mOPDdtEoICx32LgZGuioWyvoBPq/XuL+zc0uz3QzAYjOnGTR4qFjktqJnB8Ng+OS
-V9YdFQ7ZbVw7UZo5o+VUcGTXy3Da4E1BllhlH2yE7B91+1oZkT6KiloYEOPpvpoP
-T8h3JK8I+N9yUvhgulCjZHN7wbhfy3RHPOWCF/FkcZPU/JsWhujqirWvnzDimpoM
-9+zvSCFPT4C1ns87kIuCR1jpWVvkLuddq7OUE5qyEFBm2nudHRpi5AAY1rK1gz1L
-1Pk82V8rJFHrZvGWdqAI
-=h5de
+iQIcBAEBCAAGBQJVQ+zbAAoJEB9VdM6hupKVevMP/3wrpKyWIjodGBiMG/w38Va3
+cnWJSNgW2xISXDfom+eZH/vL5F5UOvevyLmxIAjJspFWq7yXSNKBus80i167jJP3
+q85VB8tsrDjR4Ioo/nKV/KV5pRv6vme+2g3X6n7fyuD+5EnsOFQeRRdAqL5xj3XJ
+r3u73xv+KceB7b9Q6MnR1mjJsXWn9jgf4Sth89oMjjwJMJ/42KKaF/GLcQygf3WQ
+5X1teHgWsWlCCSFKn+QOuk6epQoLpo5lIyU8Zv3ryxjMLV4rrd78UT5bK/rXLFq9
+N2ONyjZ4KaUebsHl6vsAnTT8koRH2a7fio3PaA+1GgqqN+XXfYG2hPVcIRMTAyPm
+5l7AyVXl1rGbYiN0TzeMTwr68/CDfAvjvLevsxiIz+OdvNDGBm2Ye8a10Z8zcW/6
+J/KySu5iB9q/OfH4/pzh4Con3aFkGGWIT01vb3MqQOLC9TtX4rUoPijP73IzjShs
+P7YEvCEVNVBFqfWsmjqopVDOKBANNs5bHx7JZsAR170UOKyfZKtPxyon/R0PHJMn
+NWRDkxSsiY3r1icPuzlMAzlLP0eepxRM+4ae8wp4cPE090R+WkeeuDFd3rj/5Jso
+akC7vlwm8p8YYx+tHdodbODhXbATdzLhWwDXKiyXX3IrQTww7Lyt3yxqLThtWBQB
+WVT6yGeENi8G1B6i3wRr
+=LXlO
 -----END PGP SIGNATURE-----
