@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=dev-perl/AnyEvent-5 >=dev-perl/Guard-0.500.0 virtual/perl-Scalar-List-Utils >=virtual/perl-Storable-2.150.0 dev-perl/common-sense virtual/perl-ExtUtils-MakeMaker dev-lang/perl:=[-build(-)]
+DESCRIPTION=The only real threads in perl
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/Coro/
+KEYWORDS=~amd64 ~x86
+LICENSE=|| ( Artistic GPL-1+ )
+RDEPEND=>=dev-perl/AnyEvent-5 >=dev-perl/Guard-0.500.0 virtual/perl-Scalar-List-Utils >=virtual/perl-Storable-2.150.0 dev-perl/common-sense dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/M/ML/MLEHMANN/Coro-6.42.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=016f6b775f571958e46829d99442c724
