@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Convert-ASN1
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-ASN1/ChangeLog,v 1.71 2014/08/22 14:42:42 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-ASN1/ChangeLog,v 1.72 2015/05/01 21:04:11 dilfridge Exp $
+
+*Convert-ASN1-0.270.0 (01 May 2015)
+
+  01 May 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Convert-ASN1-0.270.0.ebuild:
+  Version bump
 
 *Convert-ASN1-0.260.0-r1 (22 Aug 2014)
 
